# iers

./: .gitignore  README.md  iers.cabal
src/Data/: IERS.hs
test/: Parse.hs  RoundTrip.hs
test-data/: get.sh  test.tar.xz  unzip.sh  zip.sh
