cabal-version:      2.4
name:               iers
version:            0.1.0.0
synopsis:           Fetch and Manipulate IERS Bulletin Data
description:
    Fetch and Manipulate IERS Bulletin Data
    .


homepage:           https://github.com/TravisWhitaker/iers
bug-reports:        https://github.com/TravisWhitaker/iers
license:            MIT
license-file:       LICENSE
author:             Travis Whitaker
maintainer:         pi.boy.travis@gmail.com

copyright:          Travis Whitaker 2025
category:           Math
extra-source-files:
    README.md
--     CHANGELOG.md

common common
    default-language: Haskell2010
    ghc-options: -O2
                 -Weverything
                 -Wcompat
                 -- -Werror
                 -Wno-unsafe
                 -Wno-type-defaults
                 -Wno-missing-safe-haskell-mode
                 -Wno-implicit-prelude
                 -Wno-missing-import-lists
                 -Wno-prepositive-qualified-module
                 -Wno-missing-kind-signatures
                 -Wno-monomorphism-restriction
                 -Wno-missing-role-annotations
                 -Wno-missed-specialisations
                 -Wno-all-missed-specialisations
                 -Wno-error=missing-local-signatures

library
    import:           common
    exposed-modules:  Data.IERS
    --other-modules:
    build-depends:    base >=4.14 && <5
                    , attoparsec
                    , containers
                    , bytestring
                    , req
                    , serialise
                    , time
    hs-source-dirs:   src

test-suite parse
    import:           common
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Parse.hs
    build-depends:    base >=4.14 && <5
                    , async
                    , attoparsec
                    , bytestring
                    , containers
                    , directory
                    , filepath
                    , iers
    ghc-options:      -threaded
                      -rtsopts
                      "-with-rtsopts=-N"
                      -Wno-all-missed-specialisations

test-suite roundtrip
    import:           common
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          RoundTrip.hs
    build-depends:    base >=4.14 && <5
                    , async
                    , attoparsec
                    , bytestring
                    , containers
                    , directory
                    , filepath
                    , serialise
                    , iers
    ghc-options:      -threaded
                      -rtsopts
                      "-with-rtsopts=-N"
                      -Wno-all-missed-specialisations
